authorization_code/public/styles.css
#login, #loggedin {
    display: none;
}

.wrapper { 
overflow:hidden;
}

.wrapper div {
min-height: 200px;
padding: 10px;
}

#button-group {
  max-height: 70px;
  min-height: 50px;
  max-width: 450px;
  min-width: 100px;
  /* background-color: antiquewhite; */
}

#button-group2 {
  max-height: 70px;
  min-height: 50px;
  /* background-color: antiquewhite; */
}

#one {
/* background-color: gray; */
/* float:left;  */
/* margin-right:20px; */
width:200px;
min-width: 550px;
}
#two { 
/* background-color: white; */
overflow:hidden;
/* margin:10px;
border:2px dashed #ccc; */
min-height:170px;
padding-top: 100px;
}

  .themeBtn {
    max-height: 15px;
  }

  .themeBtn:focus {
    outline: none;
    box-shadow: none;
  }

  .timeBtn {
    max-height: 15px;
  }

  .timeBtn:focus {
    outline: none;
    box-shadow: none;
  }


  


  @font-face {
    font-family: myFirstFont;
    src: url("./CloudyCloud-nREq4.otf") format("opentype");
  }
  
  #header {
    font-family: myFirstFont;
    font-size: 2em;
  }

  #info {
    margin-right: 20px;
  }

  .label {
    text-align: left;
  }



@media screen and (max-width: 1000px) {
  /* #one { 
      float: none;
      margin-right:0;
      width:auto;
      border:0;
      border-bottom:2px solid #000;   
  } */
}


@media screen and (max-width: 1200px) {
  .wrapper { 
    overflow:hidden;
    text-align: center;
  }

  #one {
    /* background-color: gray; */
    /* float:left;  */
    /* margin-right:20px; */
    width:200px;
    border-right:2px solid #000;
    min-width: 550px;
    margin:auto;
  }


  #two { 
    background-color: white;
    overflow:hidden;
    min-height:170px;
    padding-top: 0px;
    min-width: 500px;
    margin:auto;
  }

}

